Updated theme with input placeholder and values, changed js jquery, updated css for mobile

--- a/docroot/modules/custom/torque_conversion_calculator/templates/block--torque-conversion-calculator.html.twig
+++ b/docroot/modules/custom/torque_conversion_calculator/templates/block--torque-conversion-calculator.html.twig
@@ -35,7 +35,7 @@
   <div class="block-torque-conversion-calculator__form-wrapper">
     <div class="block-torque-conversion-calculator__form-input">
       <p><b>Enter the number you want to convert</b></p>
-      <input type="text" id="conversionInput" name="selectedUnit" size="10">
+      <input type="text" id="conversionInput" name="selectedUnit" size="10" placeholder="10">
     </div>
     <div class="block-torque-conversion-calculator__form-measure">
       <p><b>Current Unit of measure</b></p>
@@ -56,7 +56,7 @@
     </div>
 
     <div class="block-torque-conversion-calculator__form-buttons">
-      <input class="block-torque-conversion-calculator__button-convert" id="block-torque-conversion-calculator-button-convert" type="submit" name="button" value="Convert">
+      <input class="block-torque-conversion-calculator__button-convert" id="block-torque-conversion-calculator-button-convert" type="submit" name="button" placeholder="10">
       <input id="block-torque-conversion-calculator-button-reset" type="reset" name="Reset" value="Clear">
     </div>
   </div>
@@ -74,39 +74,39 @@
             </th>
           </tr>
           <tr>
-            <td><input id="gf_cm_input" type="text" name="result01"></td>
+            <td><input id="gf_cm_input" type="text" name="result01" value="0"></td>
             <td>gf·cm</td>
           </tr>
           <tr>
-            <td><input id="kgf_cm_input" type="text" name="result02"></td>
+            <td><input id="kgf_cm_input" type="text" name="result02" value="0"></td>
             <td>kgf·cm</td>
           </tr>
           <tr>
-            <td><input id="kgf_m_input" type="text" name="result03"></td>
+            <td><input id="kgf_m_input" type="text" name="result03" value="0"></td>
             <td>kgf·m</td>
           </tr>
           <tr>
-            <td><input id="mN_m_input" type="text" name="result04"></td>
+            <td><input id="mN_m_input" type="text" name="result04" value="0"></td>
             <td>mN·m</td>
           </tr>
           <tr>
-            <td><input id="cN_m_input" type="text" name="result05"></td>
+            <td><input id="cN_m_input" type="text" name="result05" value="0"></td>
             <td>cN·m(N·cm)</td>
           </tr>
           <tr>
-            <td><input id="N_m_input" type="text" name="result06"></td>
+            <td><input id="N_m_input" type="text" name="result06" value="0"></td>
             <td>N·m</td>
           </tr>
           <tr>
-            <td><input id="ozf_in_input" type="text" name="result07"></td>
+            <td><input id="ozf_in_input" type="text" name="result07" value="0"></td>
             <td>ozf·in</td>
           </tr>
           <tr>
-            <td><input id="lbf_in_input" type="text" name="result08"></td>
+            <td><input id="lbf_in_input" type="text" name="result08" value="0"></td>
             <td>lbf·in</td>
           </tr>
           <tr>
-            <td><input id="lbf_ft_input" type="text" name="result09"></td>
+            <td><input id="lbf_ft_input" type="text" name="result09" value="0"></td>
             <td>lbf·ft</td>
           </tr>
         </tbody>
