--- a/source/themes/custom/gearwrench_au/styles/libraries/block/torque-conversion-calculator.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/block/torque-conversion-calculator.scss
@@ -17,15 +17,59 @@
     }
   }
 
-  .block-torque-conversion-calculator__form-buttons {
-    margin-bottom: rem(48px);
-
-    @include media('>=md') {
+  .block-torque-conversion-calculator__form-wrapper {
+    @include media('>=lg') {
       max-width: 50%;
     }
+  }
 
-    .block-torque-conversion-calculator__button-convert {
-      margin-bottom: rem(24px);
+  .block-torque-conversion-calculator__form-input-heading {
+    order: 1;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  .block-torque-conversion-calculator__form-input {
+    order: 2;
+
+    @include media('>=md') {
+      order: 3;
+    }
+  }
+
+  .block-torque-conversion-calculator__form-measure-heading {
+    order: 3;
+
+    p {
+      margin: 0;
+    }
+
+    @include media('>=md') {
+      order: 2;
+    }
+  }
+
+  .block-torque-conversion-calculator__form-measure {
+    order: 4;
+  }
+
+  .block-torque-conversion-calculator__form-buttons {
+    order: 5;
+    margin-bottom: rem(48px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: rem(24px);
+
+    @include media('>=md') {
+      max-width: 100%;
+      grid-column: 1/3;
+    }
+
+    .block-torque-conversion-calculator__button-reset {
+      @include btn(secondary);
+      padding: 0;
     }
   }
 
