Updated convert text

--- a/docroot/modules/custom/torque_conversion_calculator/templates/block--torque-conversion-calculator.html.twig
+++ b/docroot/modules/custom/torque_conversion_calculator/templates/block--torque-conversion-calculator.html.twig
@@ -34,7 +34,7 @@
 
   <div class="block-torque-conversion-calculator__form-wrapper">
     <div class="block-torque-conversion-calculator__form-input-heading">
-      <p><b>Enter the number you want to convert</b></p>
+      <p><b>Enter the number to convert</b></p>
     </div>
     <div class="block-torque-conversion-calculator__form-input">
       <input type="text" id="conversionInput" name="selectedUnit" size="10" placeholder="10">
