Changed Css comment name

--- a/source/themes/custom/gearwrench_au/styles/libraries/block/torque-conversion-calculator.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/block/torque-conversion-calculator.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// Block: Product: Buy Now Sticky
+// Block: Torque Conversion Calculator
 // -----------------------------------------------------------------------------
 
 @import '../../globals';
