VYRKCATG-246: Added CT AU Media Pages view filters for category.

--- a/source/themes/custom/crescenttool_au/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/view/media-pages.scss
@@ -62,7 +62,7 @@
     }
   }
 
-  .view-filters {
+  .view-filters .views-exposed-form {
     display: none;
     grid-column: 1;
 
@@ -70,8 +70,57 @@
       display: block;
     }
 
-    .fieldset-legend {
-      display: none;
+    legend {
+      @include type-header(h6, black, included);
+      margin-bottom: 1rem;
+      padding: 1rem 0;
+      position: relative;
+      width: 100%;
+
+      .fieldset-legend {
+        @include icon('arrow', after, false);
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: space-between;
+
+        &::after {
+          transform: rotate(90deg);
+        }
+      }
+
+      &:after {
+        background-color: $gray-40;
+        bottom: 0;
+        content: '';
+        height: 1px;
+        left: 0;
+        position: absolute;
+        width: 100%;
+      }
+    }
+
+    fieldset {
+      margin: 0;
+      padding: 0;
+    }
+
+    .form-item {
+      font-size: rem(14px);
+      margin-bottom: 1rem !important;
+      width: 100%;
+    }
+
+    .form-checkboxes input[type='checkbox'] + label:before {
+      top: -.125rem;
+    }
+
+    .form-checkboxes input[type='checkbox'] + label:after {
+      top: .125rem;
+    }
+
+    .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
+      background-color: transparent;
     }
 
     &.mobile-show {
