VYRKCATG-370: Set the filters to be a scrollable div. Got the accordions to open first one unless others have selections then open only those with selections. Finally got it to scroll to the top of products on page load. Just need to get the scrollbar styles to work.

--- a/source/themes/custom/gearwrench_au/styles/base/_base.scss
+++ b/source/themes/custom/gearwrench_au/styles/base/_base.scss
@@ -26,6 +26,7 @@ body {
   font-weight: $fw-medium;
   line-height: $body-line-height;
   overflow-x: hidden;
+  scrollbar-color: $primary-orange;
 
   .ui-widget.ui-widget-content.ui-autocomplete {
     max-width: calc(100% - 4rem);
@@ -64,6 +65,10 @@ body {
       line-height: 1.25;
     }
   }
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: $primary-orange;
 }
 
 html,
