--- a/source/themes/custom/gearwrench_au/styles/base/_inputs.scss
+++ b/source/themes/custom/gearwrench_au/styles/base/_inputs.scss
@@ -182,6 +182,7 @@ $active-gap: 8px; // the math likes px values
 
   input[type='checkbox']:checked + label:before {
     background-color: $primary-orange;
+    border-color: $primary-orange;
   }
 
   // fake input box active indicator
