--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-category.scss
@@ -14,7 +14,6 @@
  * Component
  */
 .node--type-product-category.node--view-mode-full .node__content {
-
   .page-heading {
     @include flex();
     flex-flow: row wrap;
@@ -83,10 +82,28 @@
       grid-template-columns: repeat(3, 1fr);
     }
 
-
     .crescenttool-product-category-filters {
       display: none;
       grid-column: 1;
+      height: 100vh;
+      overflow: auto scroll;
+
+      scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
+      scrollbar-color: $primary-red transparent; // sass-lint:disable-line no-misspelled-properties
+
+      &::-webkit-scrollbar {
+        width: 5px;               /* width of the entire scrollbar */
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent;        /* color of the tracking area */
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $primary-red;    /* color of the scroll thumb */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+        border: 3px solid transparent;  /* creates padding around scroll thumb */
+      }
 
       &.mobile-show {
         display: flex;
@@ -158,7 +175,7 @@
         margin-bottom: 1rem;
         padding: 1rem 0;
         position: relative;
-        width: 100%;
+        width: 98%;
 
         .fieldset-legend {
           @include icon('arrow', after, false);
@@ -180,6 +197,12 @@
           left: 0;
           position: absolute;
           width: 100%;
+        }
+      }
+
+      .component-accordion-item--open legend {
+        .fieldset-legend:after {
+          transform: rotate(-90deg);
         }
       }
 
@@ -220,7 +243,6 @@
     }
 
     .view-product-category {
-
       .view-header {
         @include type-header(h6, black, included);
         @include flex();
