--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
@@ -88,6 +88,23 @@
       height: 100vh;
       overflow: auto scroll;
 
+      scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
+      scrollbar-color: $primary-orange transparent; // sass-lint:disable-line no-misspelled-properties
+
+      &::-webkit-scrollbar {
+        width: 5px;               /* width of the entire scrollbar */
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent;        /* color of the tracking area */
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $primary-orange;    /* color of the scroll thumb */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+        border: 3px solid transparent;  /* creates padding around scroll thumb */
+      }
+
       &.mobile-show {
         display: flex;
         flex-direction: column;
