--- a/source/themes/custom/gearwrench/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/media-pages.scss
@@ -14,6 +14,21 @@
  * View
  */
 
+.mobile-view-filter-header {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 0.2rem;
+
+  .filter-icon {
+    @include icon('filter', after);
+  }
+
+  @include media('>=md') {
+    .filter-icon {
+      visibility: hidden;
+    }
+  }
+}
 
 .view-media-pages {
   display: grid;
@@ -36,34 +51,140 @@
       text-align: right;
       width: 25%;
     }
+  }
 
-    .filter-icon {
-      @include icon('filter', after);
+  @include media('<md') {
+    .view-filters {
+      display: none;
+      grid-column: 1;
 
-      cursor: pointer;
-      display: inline-block;
-      font-size: 18px;
-      margin-right: 20px;
-    }
+      .fieldset-legend {
+        display: none;
+      }
 
-    .sort-icon {
-      @include icon('sort', after);
+      &.mobile-show {
+        display: flex;
+        flex-direction: column;
+        background-color: #FFFFFF;
+        box-shadow: 0 0 3rem 5rem rgba(0, 0, 0, 0.6);
+        bottom: 0;
+        left: 15vw;
+        overflow: scroll;
+        padding-top: 75px;
+        padding-left: 1rem;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 85vw;
+        z-index: 499;
 
-      cursor: pointer;
-      display: inline-block;
+        &.hide {
+          display: none;
+          z-index: -5;
+        }
+
+        .views-exposed-form.bef-exposed-form {
+          order: 9;
+        }
+
+        .fieldgroup {
+          width: 85%;
+        }
+
+        .mobile-filter-header {
+          border-bottom: 1px solid #000000;
+          height: 3rem;
+          max-width: 100%;
+          order: 3;
+        }
+
+        .mobile-filter-header-inner {
+          align-items: center;
+          display: flex;
+          height: 3rem;
+          justify-content: space-between;
+          padding-right: 1.5rem;
+        }
+
+        .mobile-close-icon {
+          height: 2rem;
+          width: 2rem;
+
+          &::before {
+            font-family: 'themeIcons';
+            content: icon-char('close');
+          }
+        }
+
+        legend {
+          width: 85vw;
+
+          .fieldset-legend {
+            padding-right: 3.8rem;
+            width: 100%;
+          }
+        }
+      }
     }
   }
 
-  .view-filters {
-    display: none;
-    grid-column: 1;
-
-    @include media('>=md') {
+  @include media('>=md') {
+    .view-filters .views-exposed-form {
       display: block;
-    }
+      grid-column: 1;
 
-    .fieldset-legend {
-      display: none;
+      legend {
+        @include type-header(h6, black, included);
+        margin-bottom: 1rem;
+        padding: 1rem 0;
+        position: relative;
+        width: 100%;
+
+        .fieldset-legend {
+          @include icon('arrow', after, false);
+          display: flex;
+          position: relative;
+          align-items: center;
+          justify-content: space-between;
+
+          &::after {
+            transform: rotate(90deg);
+          }
+        }
+
+        &:after {
+          background-color: $gray-40;
+          bottom: 0;
+          content: '';
+          height: 1px;
+          left: 0;
+          position: absolute;
+          width: 100%;
+        }
+      }
+
+      fieldset {
+        margin: 0;
+        padding: 0;
+      }
+
+      .form-item {
+        font-size: rem(14px);
+        margin-bottom: 1rem !important;
+        width: 100%;
+      }
+
+      .form-checkboxes input[type='checkbox'] + label:before {
+        top: -.125rem;
+      }
+
+      .form-checkboxes input[type='checkbox'] + label:after {
+        top: .125rem;
+      }
+
+      .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
+        background-color: transparent;
+      }
     }
   }
 
@@ -92,6 +213,30 @@
     .views-row {
       .node--view-mode-teaser {
         width: 100%;
+      }
+    }
+  }
+}
+
+.chips {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0;
+
+  .chip {
+    background-color: $black;
+    color: $white;
+    margin: 0.2rem;
+    padding: 0.2rem 0.4rem;
+    white-space: nowrap;
+
+    .chip-close-icon {
+
+      &::before {
+        font-family: 'themeIcons';
+        content: icon-char('close');
+        margin-left: 1rem;
       }
     }
   }
