--- a/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
@@ -34,19 +34,12 @@
 
     .filter-icon {
       @include icon('filter', after);
-
-      cursor: pointer;
-      //display: inline-block;
-      display: none;
-      font-size: 18px;
-      margin-right: 20px;
     }
 
-    .sort-icon {
-      @include icon('sort', after);
-
-      cursor: pointer;
-      display: inline-block;
+    @include media('>=md') {
+      .filter-icon {
+        visibility: hidden;
+      }
     }
   }
 
@@ -60,6 +53,74 @@
 
     .fieldset-legend {
       display: none;
+    }
+
+    &.mobile-show {
+      display: flex;
+      flex-direction: column;
+      background-color: #FFFFFF;
+      box-shadow: 0 0 3rem 5rem rgba(0, 0, 0, 0.6);
+      bottom: 0;
+      left: 15vw;
+      overflow: scroll;
+      padding-top: 75px;
+      padding-left: 1rem;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 85vw;
+      z-index: 499;
+
+      &.hide {
+        display: none;
+        z-index: -5;
+      }
+
+      .views-exposed-form.bef-exposed-form {
+        order: 9;
+      }
+
+      .fieldgroup {
+        width: 85%;
+      }
+
+      .mobile-filter-header {
+        border-bottom: 1px solid #000000;
+        height: 3rem;
+        max-width: 100%;
+        order: 3;
+      }
+
+      .mobile-filter-header-inner {
+        align-items: center;
+        display: flex;
+        height: 3rem;
+        justify-content: space-between;
+        padding-right: 1.5rem;
+      }
+
+      .mobile-close-icon {
+        height: 2rem;
+        width: 2rem;
+
+        &::before {
+          font-family: 'themeIcons';
+          content: icon-char('close');
+        }
+      }
+
+      legend {
+        width: 85vw;
+
+        .fieldset-legend {
+          padding-right: 3.8rem;
+          width: 100%;
+        }
+      }
+
+      #edit-submit-new-products {
+        display: none;
+      }
     }
   }
 
@@ -88,6 +149,30 @@
     .views-row {
       .node--view-mode-teaser {
         width: 100%;
+      }
+    }
+  }
+
+  .chips {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 0;
+
+    .chip {
+      background-color: $black;
+      color: $white;
+      margin: 0.2rem;
+      padding: 0.2rem 0.4rem;
+      white-space: nowrap;
+
+      .chip-close-icon {
+
+        &::before {
+          font-family: 'themeIcons';
+          content: icon-char('close');
+          margin-left: 1rem;
+        }
       }
     }
   }
