--- a/source/themes/custom/gearwrench_au/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/teaser--product.scss
@@ -104,7 +104,9 @@
     display: inline-block !important;
     float: none;
     font-size: 1rem !important;
+    padding: 1rem 1.75rem .85rem !important;
     transition: $transition-base;
+    white-space: inherit !important;
     width: 100%;
 
     @include media('<md') {
