--- a/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
@@ -46,13 +46,102 @@
   .view-filters {
     display: none;
     grid-column: 1;
+    height: 100vh;
+    overflow: auto scroll;
+
+    scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
+    scrollbar-color: $primary-orange transparent; // sass-lint:disable-line no-misspelled-properties
+
+    &::-webkit-scrollbar {
+      width: 5px;               /* width of the entire scrollbar */
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;        /* color of the tracking area */
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $primary-orange;    /* color of the scroll thumb */
+      border-radius: 20px;       /* roundness of the scroll thumb */
+      border: 3px solid transparent;  /* creates padding around scroll thumb */
+    }
 
     @include media('>=md') {
       display: block;
+      margin-right: 1rem;
+
+      legend {
+        min-width: 15rem;
+      }
     }
 
-    .fieldset-legend {
-      display: none;
+    .form-checkboxes > ul {
+      margin-left: 0;
+      padding-left: 0;
+    }
+
+    ul li {
+      list-style: none;
+    }
+
+    legend {
+      @include type-header(h6, black, included);
+      margin-bottom: 1rem;
+      padding: 1rem 0;
+      position: relative;
+      width: 98%;
+
+      .fieldset-legend {
+        @include icon('arrow', after, false);
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: space-between;
+
+        &::after {
+          left: -10px;
+          position: relative;
+          transform: rotate(90deg);
+        }
+      }
+
+      &:after {
+        background-color: $gray-40;
+        bottom: 0;
+        content: '';
+        height: 1px;
+        left: 0;
+        position: absolute;
+        width: 100%;
+      }
+    }
+
+    .component-accordion-item--open legend {
+      .fieldset-legend:after {
+        transform: rotate(-90deg);
+      }
+    }
+
+    fieldset {
+      margin: 0;
+      padding: 0;
+    }
+
+    .form-item {
+      font-size: rem(14px);
+      margin-bottom: 1rem !important;
+    }
+
+    .form-checkboxes input[type='checkbox'] + label:before {
+      top: -.125rem;
+    }
+
+    .form-checkboxes input[type='checkbox'] + label:after {
+      top: .125rem;
+    }
+
+    .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
+      background-color: transparent;
     }
 
     &.mobile-show {
